force-app/main/default/objects/Feedback_Form__c/Feedback_Form__c.object-meta.xml
<CustomObject>
    <label>Feedback Form</label>
    <nameField>
        <displayFormat>OF-{0000}</displayFormat>
        <label>Feedback Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>