force-app/main/default/objects/Feedback_Form__c/fields/Active_Flag__c.field-meta.xml
<CustomField>
    <fullName>Active_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Flag</label>
    <type>Checkbox</type>
</CustomField>