force-app/main/default/objects/Feedback_Form__c/fields/Applicable_Month__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Month__c</fullName>
    <label>Applicable Month</label>
    <type>Date</type>
</CustomField>