force-app/main/default/objects/Feedback_Form__c/fields/department__c.field-meta.xml
<CustomField>
    <fullName>department__c</fullName>
    <label>department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>