force-app/main/default/objects/Feedback_Form__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <inlineHelpText>Enter the title of the form</inlineHelpText>
    <label>Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>